--- a/app/src/main/res/layout/fragment_animal_add.xml
+++ b/app/src/main/res/layout/fragment_animal_add.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg"
+        android:background="@drawable/background"
         android:orientation="vertical"
         tools:context=".MainActivity">
 
@@ -172,14 +172,6 @@
                         android:background="@android:color/holo_green_light"
                         android:text="@string/addButton" />
 
-                    <Button
-                        android:id="@+id/cancelButton"
-                        style="@style/Button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@android:color/holo_red_light"
-                        android:text="@string/cancelButton" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
