--- a/app/src/main/res/layout/fragment_animal_detail.xml
+++ b/app/src/main/res/layout/fragment_animal_detail.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg"
+        android:background="@drawable/background"
         android:orientation="vertical"
         tools:context=".MainActivity">
 
@@ -144,17 +144,7 @@
                     android:paddingRight="20dp">
 
                     <Button
-                        android:id="@+id/acceptButton"
-                        style="@style/Button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="20dp"
-                        android:layout_weight="1"
-                        android:background="@android:color/holo_green_light"
-                        android:text="@string/editButton" />
-
-                    <Button
-                        android:id="@+id/cancelButton"
+                        android:id="@+id/deleteButton"
                         style="@style/Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
