--- a/app/src/main/res/layout/fragment_animal_list.xml
+++ b/app/src/main/res/layout/fragment_animal_list.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg"
+        android:background="@drawable/background"
         android:orientation="vertical"
         tools:context=".MainActivity">
 
@@ -24,6 +24,7 @@
             android:orientation="vertical">
 
             <ListView
+                android:id="@+id/listView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
