Add animal update function

--- a/app/src/main/res/layout/fragment_animal_add.xml
+++ b/app/src/main/res/layout/fragment_animal_add.xml
@@ -163,7 +163,7 @@
                     android:paddingRight="20dp">
 
                     <Button
-                        android:id="@+id/acceptButton"
+                        android:id="@+id/addButton"
                         style="@style/Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
